--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -19,11 +19,11 @@ body {
   position: fixed;
   right: 60px;
   bottom: 20px;
-  border: 1px solid #5d5d5d;
+  border: 1px solid #ed5565;
   border-radius: 3px;
   display: block;
   padding: 10px;
-  color: #ddd;
+  color: #57a863;
   z-index: 9999;
 }
 #top-button:hover {
